Agrega clases para artículo principal y notas recomendadas

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
   </header>
   <main>
-    <article>
+    <article class="principal">
       <section>
         <h1>El crucero más grande del mundo encalló en Las Toninas</h1>
       </section>
@@ -53,7 +53,7 @@
         <p class="firma">Por: <a href="https://github.com/rfripp2">Juan González</a> - <a href="https://github.com/livchits">Lucas Livchits</a></p>
       </section>
     </article>
-    <section>
+    <section class="recomendadas">
       <article>
         <h3>Cinco lugares que tenés que conocer en Ushuaia</h3>
         <img src="images/ushuaia.jpg" alt="Cinco lugares que tenés que conocer en Ushuaia"/>
